--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   boolean-0.23.tar.gz: 2036a50eebfb755a8f9ff0e661fe0e7e833caefb
-sources:
   boolean-0.28.tar.gz: 2a4fbc78ebfa99cb7427ff7245f5d503877f092f
+sources:
+  boolean-0.32.tar.gz: c982a0864274883e129f6a89c9f6661657e4bfc1
