--- a/.abf.yml
+++ b/.abf.yml
@@ -1,5 +1,6 @@
 removed_sources:
   boolean-0.23.tar.gz: 2036a50eebfb755a8f9ff0e661fe0e7e833caefb
   boolean-0.28.tar.gz: 2a4fbc78ebfa99cb7427ff7245f5d503877f092f
-sources:
   boolean-0.32.tar.gz: c982a0864274883e129f6a89c9f6661657e4bfc1
+sources:
+  boolean-0.38.tar.gz: 378207f4de70fd5f9fdc9006c464d09ad4b60b1a
